add message by id logic
